# physics-based-pedestrian-modeling

./: .buildinfo  .coveragerc  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  AUTHORS.rst  CITATION.cff  CONTRIBUTING.rst  LICENSE  MANIFEST.in  Makefile  README.md  README.rst  genindex.html  how_to_use_physped.ipynb  hydra_testing.py  index.html  installation.html  min_versions.html  modules.html  objects.inv  physped.core.html  physped.html  physped.io.html  physped.preprocessing.html  physped.tests.core.html  physped.tests.html  physped.utils.html  physped.visualization.html  process.sh  py-modindex.html  pyproject.toml  release-history.html  requirements-dev.txt  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  (+2 more)
.github/workflows/: docs.yml  docs_pages_workflow.yml  integration-tests.yaml  pre-commit.yml  testing.yml
_modules/: index.html
_modules/physped/: main.html  omegaconf_resolvers.html  processing_pipelines.html
_sources/: index.rst.txt  modules.rst.txt  physped.core.rst.txt  physped.io.rst.txt  physped.preprocessing.rst.txt  physped.rst.txt  physped.tests.core.rst.txt  physped.tests.rst.txt  physped.utils.rst.txt  physped.visualization.rst.txt  release-history.rst.txt  usage.rst.txt
_static/: documentation_options.js
conf/: config.yaml  science.mplstyle  science_no_latex.mplstyle
conf/grid/: curved_paths.yaml  intersecting_paths.yaml  parallel_paths.yaml  single_paths.yaml
conf/params/: asdz_pf34.yaml  curved_paths.yaml  curved_paths_synthetic.yaml  custom_paths.yaml  default_params.yaml  intersecting_paths.yaml  intersecting_paths_synthetic.yaml  minimal_dataset_for_testing.yaml  parallel_paths.yaml  single_paths.yaml  station_paths.yaml  user_input.yaml
data/grids/: curved_paths_grid.npz  custom_paths_grid.npz  intersecting_paths_grid.npz  parallel_paths_grid.npz  single_paths_grid.npz  station_paths_grid.npz
docs/: Makefile  buildDocs.sh
docs/source/: conf.py  index.rst  installation.rst  physped.core.rst  physped.preprocessing.rst  physped.rst  physped.tests.rst  physped.utils.rst  physped.visualization.rst  release-history.rst  usage.rst
physped/: __init__.py  _version.py  main.py  omegaconf_resolvers.py  processing_pipelines.py
physped/conf/: config.yaml  science_no_latex.mplstyle
physped/core/: digitizers.py  discrete_grid.py  discretize_grid.py  distribution_approximator.py  functions_to_discretize_grid.py  functions_to_select_grid_piece.py  langevin.py  langevin_model.py  lattice.py  lattice_selection.py  parametrize_potential.py  pedestrian_initializer.py  pedestrian_simulator.py  piecewise_potential.py  piecewise_potential_handling.py  simulate_trajectories.py  slow_dynamics.py  trajectory_simulator.py
physped/io/: readers.py  writers.py
physped/preprocessing/: trajectories.py  trajectory_preprocessor.py
physped/scripts/: learn_potential_from_data.py  merge_potentials.py  plot_figures.py  (+3 more)
scripts/: animation_with_every_potential_in_each_state.py  create_and_save_grid.py  create_and_save_grid_multifile.py  create_grid_from_configuration_file.py  fig1_drawing_actual_path.py  fig3_corridor_potential_surface_plots.py  learn_piecewise_potential_from_trajectories.py  learn_potential_from_data.py  main.py  piecewise_approx_of_2nd_order_potential.py  plot_all_force_fields_in_a_grid.py  plot_figures.py  plot_force_field_of_selection.py  plot_grid.py  plot_histograms.py  plot_kl_divergence_sweep.py  plot_piecewise_potential_fit.py  plot_trajectories.py  potential_convolution_narrow_corridor.py  potential_convolution_wide_corridor.py  preprocess_and_save_trajectories.py  read_and_preprocess_data.py  read_asdz_from_4tu.py  sample_dynamics_from_trajectories.py  simulate_trajectories.py  simulate_trajectories_from_potential.py
usage_notebooks/: how_to_use_physped_curved_paths.ipynb  how_to_use_physped_curved_paths_synthetic.ipynb  how_to_use_physped_other_data.ipynb  how_to_use_physped_single_paths.ipynb  how_to_use_physped_station_paths.ipynb  physped_asdz_pf34.ipynb  physped_narrow_corridor_colab.ipynb  physped_quick_start.ipynb
(+169 files in other folders)
