[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "physics-based-pedestrian-modeling"
version = "0.1.4"
description = "Python package to create physics-based pedestrian models from crowd measurements"
authors = ["Cas Pouw <c.a.s.pouw@tue.nl>"]
license = "BSD-3-Clause"
readme = "README.md"
repository = "https://github.com/c-pouw/physics-based-pedestrian-modeling/"
packages = [{include = "physped"}]

[project.scripts]
physped_main = "physped.main:main"

[tool.poetry.dependencies]
python = "^3.10"
pandas = "^2.2.2"
numpy = "^1.26.4"
scipy = "^1.13.0"
tqdm = "^4.66.2"
sdeint = "^0.3.0"
matplotlib = "^3.8.4"
hydra-core = "^1.3.2"
hydra-colorlog = "^1.2.0"
tables = "^3.9.2"
bokeh = "^3.4.1"
poetry-plugin-export = "^1.7.1"

[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
codecov = "^2.1.13"
coverage = "^7.4.4"
flake8 = "^7.0.0"
isort = "^5.13.2"
nbstripout = "^0.7.1"
pre-commit = "^3.7.0"
pre-commit-hooks = "^4.6.0"
pytest = "^8.1.1"
sphinx = "^7.2.6"
twine = "^5.0.0"
numpydoc = "^1.7.0"
polars = "^0.20.19"
fastparquet = "^2024.2.0"
sphinx-copybutton = "^0.5.2"
sphinx-rtd-theme = "^2.0.0"
ipython = "^8.25.0"

[tool.black]
line-length = 130
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist

  # The following are specific to Black, you probably don't want those.
  | blib2to3
  | tests/data
)/
'''

[tool.flake8]
max-line-length = 130
extend-ignore = ["E203", "W503"]
exclude = [".git", "__pycache__", "dist", "build", "versioneer.py", "physped/_version.py", "docs/source/conf.py"]
max-complexity = 16

[tool.isort]
atomic = true
profile = "black"
line_length = 130
skip_gitignore = true
multi_line_output = 3
include_trailing_comma = true
